--- a/app/src/main/res/layout/activity_latihan3.xml
+++ b/app/src/main/res/layout/activity_latihan3.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvNews"
+                android:id="@+id/rvLatihan3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -56,14 +56,14 @@
                 tools:listitem="@layout/items_question" />
 
             <Button
-                android:id="@+id/buttons"
+                android:id="@+id/btnSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Submit"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvNews"/>
+                app:layout_constraintTop_toBottomOf="@+id/rvLatihan3"/>
 
             <ProgressBar
                 android:id="@+id/progreslatihan"
