--- a/app/src/main/res/layout/activity_latihan4.xml
+++ b/app/src/main/res/layout/activity_latihan4.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvNews"
+                android:id="@+id/rvLatihan4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -63,7 +63,7 @@
                 android:text="Submit"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvNews"/>
+                app:layout_constraintTop_toBottomOf="@+id/rvLatihan4"/>
 
             <ProgressBar
                 android:id="@+id/progreslatihan"
