--- a/app/src/main/res/layout/items_question.xml
+++ b/app/src/main/res/layout/items_question.xml
@@ -23,7 +23,7 @@
             android:layout_height="119dp">
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/pertanyaan"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
